[gd_scene load_steps=10 format=2]

[ext_resource path="res://JugadorIzq.gd" type="Script" id=1]
[ext_resource path="res://Pelota.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://JugadorDer.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 331.5, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 33.5 )

[sub_resource type="PhysicsMaterial" id=5]
bounce = 1.0

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 164 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="NodoDecoracion" type="Node" parent="."]

[node name="MuroArriba" type="StaticBody2D" parent="NodoDecoracion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodoDecoracion/MuroArriba"]
position = Vector2( 321.5, 0 )
shape = SubResource( 1 )

[node name="MuroAbajo" type="StaticBody2D" parent="NodoDecoracion"]
position = Vector2( -2, 353 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodoDecoracion/MuroAbajo"]
position = Vector2( 321.5, 0 )
shape = SubResource( 1 )

[node name="ColorRectArriba" type="ColorRect" parent="NodoDecoracion"]
margin_left = -8.0
margin_right = 654.0
margin_bottom = 17.0

[node name="ColorRectAbajo" type="ColorRect" parent="NodoDecoracion"]
margin_left = -12.0
margin_top = 336.0
margin_right = 650.0
margin_bottom = 353.0

[node name="ColorRect1" type="ColorRect" parent="NodoDecoracion"]
margin_left = 322.0
margin_top = 26.0
margin_right = 327.0
margin_bottom = 66.0

[node name="ColorRect2" type="ColorRect" parent="NodoDecoracion"]
margin_left = 322.0
margin_top = 81.0
margin_right = 327.0
margin_bottom = 121.0

[node name="ColorRect3" type="ColorRect" parent="NodoDecoracion"]
margin_left = 323.0
margin_top = 131.0
margin_right = 328.0
margin_bottom = 171.0

[node name="ColorRect4" type="ColorRect" parent="NodoDecoracion"]
margin_left = 323.0
margin_top = 181.0
margin_right = 328.0
margin_bottom = 221.0

[node name="ColorRect5" type="ColorRect" parent="NodoDecoracion"]
margin_left = 324.0
margin_top = 290.0
margin_right = 329.0
margin_bottom = 330.0

[node name="ColorRect6" type="ColorRect" parent="NodoDecoracion"]
margin_left = 323.0
margin_top = 232.0
margin_right = 328.0
margin_bottom = 272.0

[node name="LabPuntajeIzq" type="Label" parent="."]
margin_left = 267.0
margin_top = 26.0
margin_right = 307.0
margin_bottom = 40.0
text = "0"

[node name="LabPuntajeDer" type="Label" parent="."]
margin_left = 362.0
margin_top = 27.0
margin_right = 402.0
margin_bottom = 41.0
text = "0"

[node name="JugadorIzq" type="KinematicBody2D" parent="." groups=["Player"]]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="JugadorIzq"]
margin_left = 8.0
margin_top = 119.0
margin_right = 18.0
margin_bottom = 185.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="JugadorIzq"]
position = Vector2( 13.5, 152 )
shape = SubResource( 2 )

[node name="JugadorDer" type="KinematicBody2D" parent="." groups=["Player"]]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="JugadorDer"]
margin_left = 627.0
margin_top = 118.0
margin_right = 637.0
margin_bottom = 184.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="JugadorDer"]
position = Vector2( 632, 151 )
shape = SubResource( 2 )

[node name="Pelota" type="RigidBody2D" parent="." groups=["grBAll"]]
position = Vector2( 324, 176 )
physics_material_override = SubResource( 5 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pelota"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Area2DPlayer2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPlayer2"]
position = Vector2( 656, 177 )
shape = SubResource( 4 )

[node name="Area2DPlayer1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPlayer1"]
position = Vector2( -13, 178 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Pelota" to="Pelota" method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Area2DPlayer2" to="." method="_on_Area2DPlayer2_body_entered"]
[connection signal="body_exited" from="Area2DPlayer2" to="." method="_on_Area2DPlayer2_body_exited"]
[connection signal="body_entered" from="Area2DPlayer1" to="." method="_on_Area2DPlayer1_body_entered"]
